fix: correções de overflow nas tabelas e botão bug

--- a/fundamentos_do_CSS/projeto_provedor_hospedagem/css/style-precos.css
+++ b/fundamentos_do_CSS/projeto_provedor_hospedagem/css/style-precos.css
@@ -70,6 +70,7 @@
 .tabela-precos-content{
     margin: 50px auto;
     justify-content: center;
+    overflow-x: auto;
 }
 
 .circulo-azul{
